Add endpoint for (dis)like an article & Update Article schema
